--- a/Tasks/Task_18/app/src/main/res/values/strings.xml
+++ b/Tasks/Task_18/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Task_18</string>
+    <string name="about_me">Лысенко Макар Константинович БПИ162</string>
 </resources>
